# pacapalette

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: LinearSRGB.h  OKLCH.h  OKLab.h  PaletteGenerator.h  SRGB8.h
include/Color/: LinearSRGB.h  OKLCH.h  OKLab.h  RawLinearSRGB.h  SRGB8.h
include/Color/APCA/: Constants.h  getContrast.h
include/Color/Conversion/: toLinearSRGB.h  toOKLCH.h  toOKLab.h  toRawLinearSRGB.h  toSRGB8.h  toYs.h
include/Color/Utils/: fitInGamut.h  isInGamut.h
src/: LinearSRGB.cpp  OKLCH.cpp  OKLab.cpp  PaletteGenerator.cpp  SRGB8.cpp  main.cpp
src/Color/: LinearSRGB.cpp  OKLCH.cpp  OKLab.cpp  RawLinearSRGB.cpp  SRGB8.cpp
src/Color/APCA/: getContrast.cpp
src/Color/Conversion/: toLinearSRGB.cpp  toOKLCH.cpp  toOKLab.cpp  toRawLinearSRGB.cpp  toSRGB8.cpp  toYs.cpp
src/Color/Utils/: fitInGamut.cpp  isInGamut.cpp
